tests/paczka1/small_fuzzy/96737290.err
Error in line 1: ULYLd S374 28,0
Error in line 4: bHM S791 25,3
Error in line 8: bHM S736 28,5
Error in line 6: S791 S791 41,2
